fix jinja renderer in templates

--- a/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/404.html
+++ b/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/404.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% raw %} {% extends "base.html" %}
 
 {% block title %}Page Not found{% endblock %}
 
@@ -6,4 +6,4 @@
 <h1>Page Not found</h1>
 
 <p>This is not the page you were looking for.</p>
-{% endblock content %}
+{% endblock content %} {% endraw %}
