--- a/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/500.html
+++ b/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/500.html
@@ -1,3 +1,4 @@
+{% raw %}
 {% extends "base.html" %}
 
 {% block title %}Server Error{% endblock %}
@@ -10,4 +11,4 @@
 <p>We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing.</p>
 {% endblock content %}
 
-
+{% endraw %}
