add django cors headers

--- a/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/pages/home.html
+++ b/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/pages/home.html
@@ -3,4 +3,6 @@
 {% block content %}
   <p>Use this document as a way to quick start any new project.</p>
   <p>Home</p>
+  <br>
+  <p> Visit the <a href="/api/v1/">API</a> </p>
 {% endblock content %} {% endraw %}
