--- a/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/base.html
+++ b/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/base.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %} {% endraw %} {{ cookiecutter.project_name }} {% raw %} {% endblock title %}</title>
+    <title>{% block title %} {% endraw %} {{ cookiecutter.app_name }} {% raw %} {% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
