add soft delete helper classes, apidocs integration

--- a/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/base.html
+++ b/{{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/templates/base.html
@@ -31,7 +31,7 @@
     <!-- Your stuff: Third-party css libraries go here -->
 
     <!-- This file store project specific CSS -->
-    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
     {% endblock %}
 
   </head>
@@ -86,7 +86,7 @@
       <!-- Your stuff: Third-party javascript libraries go here -->
 
       <!-- place project specific Javascript in this file -->
-      <script src="{% static 'js/project.js' %}"></script>
+      <script src="{% static 'js/app.js' %}"></script>
     {% endblock javascript %}
   </body>
 </html>
